--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://${MONGO_DATABASE_USER}:${MONGO_DATABASE_PASSWORD}@mongodb/${MONGO_DATABASE_NAME}
 management.endpoints.web.exposure.include=*
 spring.jackson.serialization.indent_output=true
 management.endpoint.health.show-details=always
-spring.boot.admin.client.url=http://localhost:8083
-
+spring.boot.admin.client.url=${ADMIN_URL}
